[gd_scene load_steps=5 format=3 uid="uid://projectile_ame_uid"]

[ext_resource type="Texture2D" uid="uid://6nx03k6si5k7" path="res://Assets/SpriteSVG/plain-circle.svg" id="1_projectile"]
[ext_resource type="Script" path="res://Assets/Script/SCR_ProjectileAme.gd" id="2_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_projectile"]
radius = 3.0

[sub_resource type="Gradient" id="Gradient_trail"]
colors = PackedColorArray(0.2, 0.6, 1.0, 1.0, 0.2, 0.6, 1.0, 0.0)

[node name="ENT_ProjectileAme" type="RigidBody2D"]
collision_layer = 32
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("2_script")

[node name="SpriteProjectile" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.6, 1.0, 1.0)
scale = Vector2(0.025, 0.025)
texture = ExtResource("1_projectile")

[node name="SpriteAura" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.9, 0.7, 0.5)
scale = Vector2(0.04, 0.04)
texture = ExtResource("1_projectile")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_projectile")

[node name="TrailParticles" type="CPUParticles2D" parent="."]
emitting = true
amount = 15
lifetime = 0.8
speed_scale = 0.5
direction = Vector2(0, 0)
spread = 360.0
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color = Color(0.2, 0.6, 1.0, 0.6)

[node name="ImpactTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
one_shot = true

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HitShape" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_projectile")

[connection signal="timeout" from="ImpactTimer" to="." method="_on_timeout"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit"] 